kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: #{APP_NAMESPACE}#
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: "REPLACE.IT.WITH_YOUR_DOMAIN.COM"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apache
                port:
                  number: 80
  tls:
    - secretName: symfony-tls-cert
      hosts:
        - REPLACE.IT.WITH_YOUR_DOMAIN.COM
